--- a/app/views/trades/show.html.haml
+++ b/app/views/trades/show.html.haml
@@ -1,30 +1,46 @@
 
 #data-selector.hidden{"data-coin" => "#{@cp_str}"}
+
+
 .tradingview-widget-container
   #tradingview_71d0f
-  .tradingview-widget-copyright
-    %a(href="https://www.tradingview.com/symbols/#{@cp_str}/?exchange=BINANCE" rel="noopener" target="_blank")
-      %p= @cp_str
-      Chart
-    by TradingView
-    =@cp_str
-    %script(type="text/javascript" src="https://s3.tradingview.com/tv.js")
-    :javascript
-      var cp_str = document.getElementById("data-selector").dataset.coin
-      console.log(cp_str)
-      new TradingView.widget(
-        {
-        "width": 980,
-        "height": 610,
-        "symbol": `BINANCE:${cp_str}`,
-        "interval": "D",
-        "timezone": "Etc/UTC",
-        "theme": "dark",
-        "style": "1",
-        "locale": "en",
-        "toolbar_bg": "#f1f3f6",
-        "enable_publishing": false,
-        "container_id": "tradingview_71d0f"
-        })
 
-=render partial: "list", collection: @coins
+.coins-list-container
+  =render partial: "list", coins: @coins
+
+-# .order-form-container
+-#   =render partial: "orders/buy_sell_forms"
+
+.orders-list-container
+  =render partial: "orders/list"
+
+%script(type="text/javascript" src="https://s3.tradingview.com/tv.js")
+:javascript
+  var containerEle = document.getElementsByClassName("tradingview-widget-container")[0];
+  var rect;
+  if(containerEle){
+    rect = containerEle.getBoundingClientRect();
+  }
+  function getContainerSize() {
+    rect = containerEle.getBoundingClientRect();
+    if(!containerEle)
+      console.log("No element found");
+  }
+  window.onresize = getContainerSize;
+
+
+  var cp_str = document.getElementById("data-selector").dataset.coin
+  new TradingView.widget(
+    {
+    "width": rect.width,
+    "height": rect.height,
+    "symbol": `BINANCE:${cp_str}`,
+    "interval": "D",
+    "timezone": "Etc/UTC",
+    "theme": "dark",
+    "style": "1",
+    "locale": "en",
+    "toolbar_bg": "#f1f3f6",
+    "enable_publishing": false,
+    "container_id": "tradingview_71d0f"
+    })
