--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+@import "login.scss";
+@import "sign-up.scss";
+
 * {
     margin: 0;
     padding: 0;
@@ -100,5 +104,3 @@ body{
     color: rgba(255,255,255,0.6);
 }
 
-@import "login.scss";
-@import "sign-up.scss"
