--- a/app/views/trades/show.html.haml
+++ b/app/views/trades/show.html.haml
@@ -42,6 +42,7 @@
           %p.orders-index-data.header Symbol
           %p.orders-index-data.header Quantity
           %p.orders-index-data.header Price
+          %p.orders-index-data.header Total
           %p.orders-index-data.header Order type
           %p.orders-index-data.header Created at
         .trades-orders-index
